SubVersion: $Id$

Run './configure --enable-static=yes --enable-shared=no' for use with ValGrind !

Log:

- 10/04/2005, version 0.0.2: roms
	- rewritten TI8X+ FLASH support

	Add TiGroup (*.tig) support which is a kind of file container.

- 26/03/2005, version 0.0.1: roms
	- error management left untouched
	- logging reworked (use glib)
	- a single public header with functions & defs, others are private
	- slightly fixed namespace sheme
	- use strong types such as TiCalcModel, ...
	- glib is used for logging (not very much for strings)
	- documentation system has been changed
	- functions pointers have been removed
	- library has been fully documented
	- decreased number of headers to include (1 or 3)
	- fixed tifiles_file_is_ti and argument passing to transcode functions
	- added fread_n_bytes adn fwrite_n_bytes which replaces fwrite_n_chars 
	- fixed many missing fclose() => file truncated...
	- fixed fsignature in TI8x support
	- checked with valgrind: few allocations errors with test_tifiles_2.c
	- added a new convenient function: tifiles_content_free_group
	- tifiles_ungroup_file now returns a list of files 
	  extracted from group file
	- fixed few memory allocation issues with ValGrind.
	
====[ Version II ]====

- 05/03/2005, version 0.6.3: roms
	Added gcc 4.0 -fvisibility flag support.
	
- 03/11/2004, version 0.6.2: roms
	Fixed and tested TIB file support (read only).

- 18/09/2004, version 0.6.1: roms
	Added TI89 Titanium support. File format seems to be the same as TI89.
	Added TI84+ (SE) support. File format seems to be the same as TI83+.

- 02/07/2004, version 0.6.0: roms
	Loading of TI9x flash upgrades is less restrictive now. It can accept badly
	formatted files.
	Added checking for TI89 Titanium but FLASH upgrades have same extension and
	same header.

- 22/04/2004, version 0.5.9: roms
	Patch from Adrian Mettler <amettler@hmc.edu> merged. His patch fixes
	  some TI85/86 file handling issues about varname (padded, not padded).